# fastcfg

./: .gitignore  BENCHMARKS.md  README.md  flake8_output.txt  pyproject.toml  run_tests.sh  test_serialization copy.py
docs/source/: conf.py  fastcfg.backoff.rst  fastcfg.cache.rst  fastcfg.config.rst  fastcfg.default.rst  fastcfg.sources.aws.rst  fastcfg.sources.rst  index.rst  modules.rst
examples/: config.py  config_advanced.py  config_environ.py  custom_live_config_item.py  environments.py  environments_advanced.py  validation.py  validation_advanced.py
examples/files/: staging_invalid_url.yml
src/fastcfg/: __init__.py  exceptions.py
src/fastcfg/backoff/: __init__.py  policies.py
src/fastcfg/cache/: __init__.py  cache.py  policies.py  store.py  strategies.py
src/fastcfg/config/: __init__.py  attributes.py  base.py  cfg.py  events.py  interface.py  items.py  live_settings.py  magic_methods.py  state.py  utils.py  value_wrapper.py
src/fastcfg/default/: __init__.py
src/fastcfg/options/: __init__.py
src/fastcfg/sources/aws/: __init__.py  app_config.py  aws_config_tracker.py  boto3_live_tracker.py  lambda.py  s3.py
src/fastcfg/sources/files/: __init__.py  (+5 more)
src/fastcfg/util/: __init__.py
src/fastcfg/utils/: backoff.py
src/fastcfg/validation/: __init__.py  policies.py  validatable.py
tests/: test_aws.py  test_aws_appconfig.py  test_aws_integration.py  test_backoff.py  test_config.py  test_dict_behavior.py  test_events.py  test_file.py  test_local.py  test_memory.py  test_remote.py  test_serialization.py  test_validation.py  test_value_wrapper.py
(+11 files in other folders)
