[tool.poetry]
name = "fastcfg"
version = "0.1.0"
description = "fastcfg is a library designed to make app configuration quick, easy, and scalable"
authors = ["Breisoft <company@breisoft.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"

[[tool.poetry.packages]]
include = "fastcfg"
from = "src"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
