[tool.poetry]
name = "fastcfg"
version = "0.1.0"
description = "fastcfg is a library designed to make configuration management quick, easy, and scalable."
authors = ["Breisoft <company@breisoft.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = {version = "^1.34.104", optional = true}
pyyaml = {version = "^6.0.1", optional = true}
requests = {version = "^2.31.0", optional = true}
pydantic = {version = "^2.7.1", optional = true}

[tool.poetry.extras]
addons = ["boto3", "pyyaml", "requests", "pydantic"]

[[tool.poetry.packages]]
include = "fastcfg"
from = "src"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
python-dotenv = "^1.0.1"


[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
